--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </p>
                 <div class="flex-btn-center">
                     <button class="btn btn-light">
-                        <a href="../pages/productos.html">Hace tu pedido!</a>
+                        <a href="../pages/contacto.html">Hace tu pedido!</a>
                     </button>
                 </div>
             </div>
