Actualizadas las rutas de los footers

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -144,9 +144,9 @@
                     <h3>Enlaces útiles</h3>
                     <ul class="list-unstyled">
                         <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="../pages/empleados.html">Acerca de nosotros</a></li>
-                        <li><a href="../pages/productos.html">Productos</a></li>
-                        <li><a href="../pages/contacto.html">Contacto</a></li>
+                        <li><a href="empleados.html">Acerca de nosotros</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="terms-condition">
