--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </p>
                 <div class="flex-btn-center">
                     <button class="btn btn-light">
-                        <a href="../pages/contacto.html">Hace tu pedido!</a>
+                        <a href="pages/contacto.html">Hace tu pedido!</a>
                     </button>
                 </div>
             </div>
@@ -80,10 +80,10 @@
                 <div class="col-md-6">
                     <h3>Enlaces útiles</h3>
                     <ul class="list-unstyled">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="../pages/empleados.html">Acerca de nosotros</a></li>
-                        <li><a href="../pages/productos.html">Productos</a></li>
-                        <li><a href="../pages/contacto.html">Contacto</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="pages/empleados.html">Acerca de nosotros</a></li>
+                        <li><a href="pages/productos.html">Productos</a></li>
+                        <li><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="terms-condition">
