actualizacion zona main

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <header>
         <!-- navbar config -->
-        <nav class="navbar navbar-light bg-dark">
+        <nav class="navbar py-3">
             <!-- logo brand -->
             <div class="nav-grid-btn">
-                <div>
+                <div class="brand-link">
                     <a href="index.html">
                         Los Cuatro Alamos
                     </a>
@@ -29,22 +29,22 @@
                 <ul class="nav-center-btn navbar">
                     <li class="me-3 me-lg-1 active">
                         <a href="pages/contacto.html">
-                            <span><i class="fas fa-lg fa-sharp fa-phone"></i></span>
+                            Contactos
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="pages/empleados.html">
-                            <span><i class="fas fa-lg fa-regular fa-users"></i></span>
+                            Empleados
                         </a>
                     </li>
                     <li class="nav-item me-3 me-lg-1">
                         <a href="pages/productos.html">
-                            <span><i class="fas fa-lg fa-regular fa-cart-shopping"></i></span>
+                            Productos
                         </a>
                     </li>
                     <li class="nav-item me-3 me-lg-1">
                         <a href="pages/newsletter.html">
-                            <span><i class="fas fa-lg fa-sharp fa-regular fa-newspaper"></i></span>
+                            Newsletter
                         </a>
                     </li>
                 </ul>
@@ -52,21 +52,44 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section class="bg-intro">
-            <div class="flex-text-intro">
-                <h1>
-                    Los Cuatro Alamos
-                </h1>
-                <p>
-                    Panadería Familiar
-                </p>
-                <div class="flex-btn-center">
-                    <button class="btn btn-light">
-                        <a href="pages/contacto.html">Hace tu pedido!</a>
-                    </button>
+    <main class="w-100">
+        <section>
+            <div class="bg-intro">
+                <div class="txt-cover">
+                    <h1>Los Cuatro Alamos</h1>
+                    <h3>Panadería familiar</h3>
                 </div>
             </div>
+        </section>
+
+        <!-- TODO - introduccion-->
+
+        <section>
+            <div class="flex-items">
+                <div class="intro-group">
+                    <h2>Quiénes somos</h2>
+                    <h3>Una panaderia a otro nivel</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quidem, minima sequi dolore commodi quaerat natus. Laudantium alias reiciendis tenetur?</p>
+                </div>
+                <img src="imgs/intro-pic.jpg" alt="intropic">
+            </div>
+            <div> <!-- ICONS -->
+                <i></i>
+                <i></i>
+                <i></i>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore corporis sequi molestiae vel omnis dolorum sed sint non numquam laboriosam asperiores cupiditate deserunt, saepe architecto rem? Dolorem perferendis velit vitae.</p>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
+
+        <!-- TODO - Video de ejemplo -->
+
+        <section>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WfuDrGslXtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
     </main>
     <footer class="bg-black text-light">
