cambios en el index

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h1 class="title-intro">Nuestras tradiciones</h1>
                 <div class="intro-style">
                     <div class="box-intro-style d-flex justify-content-center align-content-center flex-column">
-                        <h2>La mejor pastelería Argentina</h2>
+                        <h2>Los mejores panes del país</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="box-intro-style d-flex align-content-center flex-column mb-2">
@@ -80,21 +80,9 @@
                 <div class="intro-p d-flex justify-content-center align-items-center">
                     <h2>Ingredientes elegidos con amor y pasión</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quisquam.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WfuDrGslXtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <button><a href="../proyectocoder/pages/contacto.html">Hace tu pedido hoy</a></button>
                 </div>
-            </div>
-            <div> <!-- ICONS -->
-                <i></i>
-                <i></i>
-                <i></i>
-            </div>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore corporis sequi molestiae vel omnis dolorum sed sint non numquam laboriosam asperiores cupiditate deserunt, saepe architecto rem? Dolorem perferendis velit vitae.</p>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WfuDrGslXtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
         <!-- TODO - Video de ejemplo -->
