--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- navbar config -->
-        <nav class="navbar py-3">
+        <nav class="navbar">
             <!-- logo brand -->
             <div class="nav-grid-btn">
                 <div class="brand-link">
