cambios al nav y al hero

--- a/index.html
+++ b/index.html
@@ -15,47 +15,35 @@
 </head>
 <body>
     <header>
-        <!-- navbar config -->
-        <nav class="navbar">
-            <!-- logo brand -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="nav-grid-btn">
-                <div class="brand-link">
-                    <a href="index.html">
-                        Los Cuatro Alamos
-                    </a>
+                <a class="brand-link" href="#">Los Cuatro Alamos</a>
+                <button class="navbar-toggler ms-auto border-black" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto nav-center-btn main-nav-btn">
+                        <li class="nav-item active col">
+                            <a class="nav-link" href="#">Empleados <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item col">
+                            <a class="nav-link" href="#">Contactos</a>
+                        </li>
+                        <li class="nav-item active col">
+                            <a class="nav-link" href="#">Productos <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item col">
+                            <a class="nav-link" href="#">Newsletter</a>
+                        </li>
+                    </ul>
                 </div>
-            <!-- logo brand end -->
-            <!-- botones centro del nav -->
-                <ul class="nav-center-btn navbar">
-                    <li class="me-3 me-lg-1 active">
-                        <a href="pages/contacto.html">
-                            Contactos
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/empleados.html">
-                            Empleados
-                        </a>
-                    </li>
-                    <li class="nav-item me-3 me-lg-1">
-                        <a href="pages/productos.html">
-                            Productos
-                        </a>
-                    </li>
-                    <li class="nav-item me-3 me-lg-1">
-                        <a href="pages/newsletter.html">
-                            Newsletter
-                        </a>
-                    </li>
-                </ul>
-            <!-- botones dentro del nav end -->
             </div>
         </nav>
     </header>
     <main>
         <section>
-            <div class="bg-intro">
-                <div class="txt-cover">
+            <div class="bg-intro img-thumbnail">
+                <div class="title-cover">
                     <h1>Los Cuatro Alamos</h1>
                     <h3>Panadería familiar</h3>
                 </div>
