--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <section>
-            <div class="bg-intro img-thumbnail">
+            <div class="bg-intro">
                 <div class="title-cover">
                     <h1>Los Cuatro Alamos</h1>
                     <h3>Panadería familiar</h3>
