--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto nav-center-btn main-nav-btn">
                         <li class="nav-item active col">
-                            <a class="nav-link" href="#">Empleados <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="pages/empleados.html">Empleados <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item col">
-                            <a class="nav-link" href="#">Contactos</a>
+                            <a class="nav-link" href="pages/contacto.html">Contactos</a>
                         </li>
                         <li class="nav-item active col">
-                            <a class="nav-link" href="#">Productos <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="pages/productos.html">Productos <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item col">
-                            <a class="nav-link" href="#">Newsletter</a>
+                            <a class="nav-link" href="pages/newsletter.html">Newsletter</a>
                         </li>
                     </ul>
                 </div>
@@ -69,7 +69,7 @@
                     <h2>Ingredientes elegidos con amor y pasión</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quisquam.</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/WfuDrGslXtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <button><a href="../proyectocoder/pages/contacto.html">Hace tu pedido hoy</a></button>
+                    <button class="btn"><a href="../proyectocoder/pages/contacto.html">Hace tu pedido hoy</a></button>
                 </div>
             </div>
         </section>
