--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -63,26 +63,88 @@
         </section>
     <!-- empleados perfiles end -->
     </main>
-    <footer class="bg-black text-light">
-        <div class="container py-5">
-            <div class="row footer-enlaces">
-                <div class="col-md-4 pb-5">
-                    <h3>Nuestras redes</h3>
-                    <i class="fa-brands fa-xxl fa-square-facebook fa-4x"></i>
-                    <i class="fa-brands fa-google-plus-g fa-4x"></i>
+    <footer>
+        <div class="container">
+            <div class="footer-top">
+                <div class="row">
+                    <div class="col-md-6 col-lg-3 about-footer">
+                        <h3>Lorem Ipsum dummy text </h3>
+                        <ul>
+                            <li><a href="tel:(010) 1234 4321"><i class="fas fa-phone fa-flip-horizontal"></i>(010) 1234 4321</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i>
+                                1 / 105 Bay Lights,
+                                <br/>Lorem Ipsum,
+                                <br/>LIC 3201
+                            </li>
+                        </ul>
+                        <a href="" class="btn red-btn">Book Now</a>
+                    </div>
+                    <div class="col-md-6 col-lg-2 page-more-info">
+                        <div class="footer-title">
+                            <h4>Page links</h4>
+                        </div>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Testimonial</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+    
+                    <div class="col-md-6 col-lg-3 page-more-info">
+                        <div class="footer-title">
+                            <h4>More Info</h4>
+                        </div>
+                        <ul>
+                            <li><a href="#">Lorem ipsum</a></li>
+                            <li><a href="#">Dolor sit amet</a></li>
+                            <li><a href="#">Consectetur Adipisicing </a></li>
+                            <li><a href="#">Ed do eiusmod tempor incididunt</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-lg-4 open-hours">
+                        <div class="footer-title">
+                            <h4>Open hours</h4>
+                            <ul class="footer-social">
+                                <li><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+    
+                            </ul>
+                        </div>
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <td><i class="far fa-clock"></i>Monday Thursday</td>
+                                    <td>9:00am - 5:00pm</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="far fa-clock"></i>Friday</td>
+                                    <td>9:00am - 4:00pm</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="far fa-clock"></i>Sturday</td>
+                                    <td>9:00am - 1:30pm</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="far fa-clock"></i>Sunday</td>
+                                    <td>9:30am - 12:00pm</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <h3>Enlaces útiles</h3>
-                    <ul class="list-unstyled">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="empleados.html">Acerca de nosotros</a></li>
-                        <li><a href="productos.html">Productos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-                <div class="terms-condition">
-                    <p>2023 Argentina, Neuquén</p>
-                    <a href="#"><b>Terminos y condiciones</b></a>
+            </div>
+            <hr>
+            <div class="footer-bottom">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a href="">Privacy policy</a>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>Lorem ipsum dolor sit amet @ 2019 All rights reserved</p>
+                    </div>
                 </div>
             </div>
         </div>
