--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="nav-grid-btn">
                 <a class="brand-link" href="#">Los Cuatro Alamos</a>
-                <button class="navbar-toggler ms-auto border-black" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler border-black" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,11 +58,11 @@
                 <div class="intro-style">
                     <div class="box-intro-style d-flex justify-content-center align-content-center flex-column">
                         <h2>Los mejores panes del país</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                     <div class="box-intro-style d-flex align-content-center flex-column mb-2">
                         <h2>Envíos a todas las provincias</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
                 <div class="intro-p d-flex justify-content-center align-items-center">
