--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             <div class="intro-group">
                 <h1 class="title-intro">Nuestras tradiciones</h1>
                 <div class="intro-style">
-                    <div class="box-intro-style d-flex justify-content-center align-content-center flex-column">
+                    <div class="box-intro-style">
                         <h2>Los mejores panes del país</h2>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
-                    <div class="box-intro-style d-flex align-content-center flex-column mb-2">
+                    <div class="box-intro-style mb-2">
                         <h2>Envíos a todas las provincias</h2>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
-                <div class="intro-p d-flex justify-content-center align-items-center">
+                <div class="intro-p">
                     <h2>Ingredientes elegidos con amor y pasión</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quisquam.</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/WfuDrGslXtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
