--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -15,139 +15,56 @@
     </head>
 <body>
     <header>
-        <!-- navbar config -->
-        <nav class="navbar navbar-light bg-dark">
-            <!-- logo brand -->
-            <div class="nav-grid-btn">
-                <div>
-                    <a class="col" href="../index.html">
-                        Los Cuatro Alamos
-                    </a>
-                </div>
-            <!-- logo brand end -->
-            <!-- botones centro del nav -->
-                <ul class="nav-center-btn navbar">
-                    <li class="me-3 me-lg-1 active">
-                        <a href="../pages/contacto.html">
-                            <span><i class="fas fa-lg fa-sharp fa-phone"></i></span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="../pages/empleados.html">
-                            <span><i class="fas fa-lg fa-regular fa-users"></i></span>
-                        </a>
-                    </li>
-                    <li class="nav-item me-3 me-lg-1">
-                        <a href="../pages/productos.html">
-                            <span><i class="fas fa-lg fa-regular fa-cart-shopping"></i></span>
-                        </a>
-                    </li>
-                    <li class="nav-item me-3 me-lg-1">
-                        <a href="../pages/newsletter.html">
-                            <span><i class="fas fa-lg fa-sharp fa-regular fa-newspaper"></i></span>
-                        </a>
-                    </li>
-                </ul>
-            <!-- botones dentro del nav end -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="brand-link display-4" href="#">Los Cuatro Alamos</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav navbar-links">
+                <a class="nav-item link-nav display-6" href="#">Productos</a>
+                <a class="nav-item link-nav display-6" href="#">Empleados</a>
+                <a class="nav-item link-nav display-6" href="#">Newsletter</a>
+                <a class="nav-item link-nav display-6" href="#">Contactos</a>
+            </div>
             </div>
         </nav>
     </header>
     <main>
-    <!-- empleados perfiles start -->
-        <section class="empleado-galeria">
-            <div class="empleado-box">
-                <a href="#"><img src="../imgs/empleado-1.jpg" class="" alt="empleado-1-imagen"></a>
-                <a href="#"><img src="../imgs/empleado-2.jpg" class="" alt="empleado-2-imagen"></a>
-                <a href="#"><img src="../imgs/empleado-3.png" class="" alt="empleado-3-imagen"></a>
+        <section class="empleados-cover container-fluid">
+            <div class="text-center">
+                <h1>Unite a la mejor panadería de Argentina</h1>
             </div>
         </section>
-    <!-- empleados perfiles end -->
+        <section class="miembros-section">
+            <h5 class="text-center text-dark">Nuestros lideres</h5>
+            <div class="admins-section">
+                <div class="usercard">
+                    <img src="../imgs/founder1.jpg" alt="">
+                    <h5 class="text-center">Gael Huertas</h5>
+                    <p>Lider de marketing</p>
+                </div>
+                <div class="usercard">
+                    <img src="../imgs/founder2.jpg" alt="">
+                    <h5 class="text-center">Julian Martos</h5>
+                    <p>Community Manager</p>
+                </div>
+                <div class="usercard">
+                    <img src="../imgs/founder3.jpg" alt="">
+                    <h5 class="text-center">Dario Caro</h5>
+                    <p class="text-center">Lider chef</p>
+                </div>
+            </div>
+            <div>
+                <img src="../imgs/" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
     </main>
     <footer>
-        <div class="container">
-            <div class="footer-top">
-                <div class="row">
-                    <div class="col-md-6 col-lg-3 about-footer">
-                        <h3>Lorem Ipsum dummy text </h3>
-                        <ul>
-                            <li><a href="tel:(010) 1234 4321"><i class="fas fa-phone fa-flip-horizontal"></i>(010) 1234 4321</a></li>
-                            <li><i class="fas fa-map-marker-alt"></i>
-                                1 / 105 Bay Lights,
-                                <br/>Lorem Ipsum,
-                                <br/>LIC 3201
-                            </li>
-                        </ul>
-                        <a href="" class="btn red-btn">Book Now</a>
-                    </div>
-                    <div class="col-md-6 col-lg-2 page-more-info">
-                        <div class="footer-title">
-                            <h4>Page links</h4>
-                        </div>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Testimonial</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-    
-                    <div class="col-md-6 col-lg-3 page-more-info">
-                        <div class="footer-title">
-                            <h4>More Info</h4>
-                        </div>
-                        <ul>
-                            <li><a href="#">Lorem ipsum</a></li>
-                            <li><a href="#">Dolor sit amet</a></li>
-                            <li><a href="#">Consectetur Adipisicing </a></li>
-                            <li><a href="#">Ed do eiusmod tempor incididunt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-lg-4 open-hours">
-                        <div class="footer-title">
-                            <h4>Open hours</h4>
-                            <ul class="footer-social">
-                                <li><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-    
-                            </ul>
-                        </div>
-                        <table class="table">
-                            <tbody>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Monday Thursday</td>
-                                    <td>9:00am - 5:00pm</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Friday</td>
-                                    <td>9:00am - 4:00pm</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Sturday</td>
-                                    <td>9:00am - 1:30pm</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Sunday</td>
-                                    <td>9:30am - 12:00pm</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="footer-bottom">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a href="">Privacy policy</a>
-                    </div>
-                    <div class="col-sm-8">
-                        <p>Lorem ipsum dolor sit amet @ 2019 All rights reserved</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </footer>
 </body>
 </html>
