agregadas las rutas correctas al nav

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav navbar-links">
-                <a class="nav-item link-nav display-6" href="#">Productos</a>
-                <a class="nav-item link-nav display-6" href="#">Empleados</a>
-                <a class="nav-item link-nav display-6" href="#">Newsletter</a>
-                <a class="nav-item link-nav display-6" href="#">Contactos</a>
-            </div>
+            <ul class="navbar-nav navbar-links">
+                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/productos.html">Productos</a>
+                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/empleados.html">Empleados</a>
+                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/newsletter.html">Newsletter</a>
+                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/contacto.html">Contactos</a>
+            </ul>
             </div>
         </nav>
     </header>
