--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -21,12 +21,12 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav navbar-links">
-                <a class="nav-item link-nav display-6" href="#">Productos</a>
-                <a class="nav-item link-nav display-6" href="#">Empleados</a>
-                <a class="nav-item link-nav display-6" href="#">Newsletter</a>
-                <a class="nav-item link-nav display-6" href="#">Contactos</a>
-            </div>
+                <ul class="navbar-nav navbar-links">
+                    <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+                </ul>
             </div>
         </nav>
     </header>
