--- a/pages/productos.html
+++ b/pages/productos.html
@@ -16,27 +16,17 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="nav-grid-btn">
-                <a class="brand-link" href="#">Los Cuatro Alamos</a>
-                <button class="navbar-toggler ms-auto border-black" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto nav-center-btn main-nav-btn">
-                        <li class="nav-item active col">
-                            <a class="nav-link" href="#">Empleados <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item col">
-                            <a class="nav-link" href="#">Contactos</a>
-                        </li>
-                        <li class="nav-item active col">
-                            <a class="nav-link" href="#">Productos <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item col">
-                            <a class="nav-link" href="#">Newsletter</a>
-                        </li>
-                    </ul>
-                </div>
+            <a class="brand-link display-4" href="#">Los Cuatro Alamos</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav navbar-links">
+                    <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+                </ul>
             </div>
         </nav>
     </header>
