probando rutas nuevas del nav

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav navbar-links">
-                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/productos.html">Productos</a>
-                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/empleados.html">Empleados</a>
-                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/newsletter.html">Newsletter</a>
-                <a class="nav-item link-nav display-6" href="../proyectocoder/pages/contacto.html">Contactos</a>
+                <a class="nav-item link-nav display-6" href="pages/productos.html">Productos</a>
+                <a class="nav-item link-nav display-6" href="pages/empleados.html">Empleados</a>
+                <a class="nav-item link-nav display-6" href="pages/newsletter.html">Newsletter</a>
+                <a class="nav-item link-nav display-6" href="pages/contacto.html">Contactos</a>
             </ul>
             </div>
         </nav>
